salesforce-metadata/force-app/main/default/objects/Client_Onboarding__c/Client_Onboarding__c.object-meta.xml
<CustomObject>
    <description>Object to track client onboarding details</description>
    <label>Client Onboarding</label>
    <nameField>
        <label>Client Onboarding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Onboardings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>