salesforce-metadata/force-app/main/default/objects/Client_Onboarding__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Onboardings</relationshipLabel>
    <relationshipName>Client_Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>