salesforce-metadata/force-app/main/default/objects/Client_Onboarding__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <label>Client Name</label>
    <length>8</length>
    <type>Text</type>
</CustomField>