salesforce-metadata/force-app/main/default/objects/Client_Onboarding__c/fields/Onboarding_date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_date__c</fullName>
    <label>Onboarding date</label>
    <type>Date</type>
</CustomField>