salesforce-metadata/force-app/main/default/objects/Client_Onboarding__c/fields/Total_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Tasks__c</fullName>
    <label>Total Tasks</label>
    <summaryForeignKey>Onboarding_task__c.Client_Onboarding__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>