salesforce-metadata/force-app/main/default/objects/Client_Onboarding__c/recordTypes/Individual_Client.recordType-meta.xml
<RecordType>
    <fullName>Individual_Client</fullName>
    <active>true</active>
    <label>Individual Client</label>
</RecordType>